--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["6282193115723@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "gcwa" : "https://instabio.cc/Alphabot",
-    "botName": "Haruka-Mdོ ",
+    "ownerNumber": ["6285360397134@s.whatsapp.net","6285360397134@s.whatsapp.net"],
+    "ownerName": "gara&rio",
+    "instagram" : "https://www.instagram.com/riodudapiraww?igsh=MWFjand0eXF5dWgzZQ==",
+    "gcwa" : "https://chat.whatsapp.com/EYl5Ur4o0ScJ4172SUkeKM",
+    "botName": "Haruka-BETA ",
     "footer": "2023 © api.zeeoneofc.my.id",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
@@ -16,14 +16,14 @@
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true, 
     "antiViewOnce": true,
-    "grupOnly": false,
+    "grupOnly": true,
     "japriOnly": false, 
     "antiDelete": false,
-    "autobio": false,
-    "anticall": true,
+    "autobio": true,
+    "anticall": false,
     "autorespond": false,
     "autoblok212": true,
-    "autoread": true,
+    "autoread": false,
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
